sonarqube/sonarqube-postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-postgresql-svc
  namespace: devops
spec:
  ports:
  - port: 5432
  selector:
    name: sonarqube-postgresql
