sonarqube/sonarqube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-svc
  namespace: devops
spec:
  ports:
  - port: 9000
  selector:
    name: sonarqube
