sonarqube/sonarqube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sonarqube.devops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarqube-svc
          servicePort: 9000
